--- a/.classpath
+++ b/.classpath
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src/java"/>
+	<classpathentry kind="src" path="../../grails-app/controllers"/>
+	<classpathentry kind="src" path="../../grails-app/domain"/>
 	<classpathentry kind="src" path="src/groovy"/>
+	<classpathentry kind="src" path="src/java"/>
 	<classpathentry excluding="spring/" kind="src" path="grails-app/conf"/>
 	<classpathentry kind="src" path="grails-app/conf/spring"/>
 	<classpathentry kind="src" path="grails-app/controllers"/>
