--- a/.travis.yml
+++ b/.travis.yml
@@ -15,11 +15,11 @@ cache:
     - $HOME/.gradle/wrapper/
     - $HOME/.cache/bower/
 before_install:
-- npm install -g eslint eslint-plugin-react bower
+    - npm install -g eslint eslint-plugin-react bower
 before_script:
-- psql -c 'create database "apollo-test";' -U postgres;
-- git clone https://github.com/elsiklab/apollo_domain_classes.git
-- cd apollo_domain_classes && ./grailsw refresh-dependencies && ./grailsw maven-install && cd -
-- eslint client
+    - psql -c 'create database "apollo-test";' -U postgres;
+    - git clone https://github.com/elsiklab/apollo_domain_classes.git
+    - cd apollo_domain_classes && ./grailsw refresh-dependencies && ./grailsw maven-install && cd -
+    - eslint client
 script:
-    - ./grailsw test-app
+    - ./grailsw test-app --non-interactive
