--- a/.eslintrc
+++ b/.eslintrc
@@ -1,40 +1,28 @@
 {
-  "env": {
-    "browser": true
+  "extends": "eslint-config-airbnb-es5",
+  "rules": {
+    "no-var": 0,
+    "no-eval": 0,
+    "no-console": 0,
+    "space-in-parens": ["error", "never"],
+    "object-shorthand": 0,
+    "indent": ["error", 4],
+    "max-len": ["error", 220, 4],
+    "no-unused-vars": [2, {"varsIgnorePattern": "profile"}],
+    "vars-on-top": 0,
+    "prefer-arrow-callback": 0,
+    "func-names": 0
   },
   "globals": {
+    "$": true,
+    "window": true,
+    "console": true,
     "dojo": true,
+    "dijit": true,
     "define": true,
-    "dijit": true
+    "require": true
   },
-  "rules": {
-    "semi": [
-      2,
-      "always"
-    ],
-    "no-unused-expressions": 2,
-    "no-cond-assign": [
-      2,
-      "except-parens"
-    ],
-    "no-eval": 0,
-    "linebreak-style": 2,
-    "comma-style": [
-      2,
-      "last"
-    ],
-    "no-loop-func": 2,
-    "block-scoped-var": 2,
-    "max-len": [
-      2,
-      10000
-    ],
-    "no-shadow": 0,
-    "dot-notation": 0,
-    "complexity": [
-      2,
-      40
-    ],
-    "no-undef": 2
+  "env": {
+    "browser": true
   }
 }
