--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ cache:
     - $HOME/.gradle/wrapper/
     - $HOME/.cache/bower/
 before_install:
-    - npm install -g eslint eslint-plugin-react bower
+    - npm install -g eslint eslint-plugin-react eslint-config-airbnb-es5 babel-eslint bower
 before_script:
     - psql -c 'create database "apollo-test";' -U postgres;
     - git clone https://github.com/elsiklab/apollo_domain_classes.git
