--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
-language: ruby
-rvm:
-  - 2.0.0
+language: groovy
+jdk:
+  - oraclejdk8
 addons:
   postgresql: "9.3"
 services:
@@ -17,8 +17,6 @@ cache:
     - $HOME/.cache/bower/
 before_install:
     - npm install -g eslint eslint-plugin-react eslint-config-airbnb-es5 babel-eslint bower
-install:
-    - gem install scaffolder scaffolder-tools
 before_script:
     - psql -c 'create database "apollo-test";' -U postgres;
     - git clone https://github.com/elsiklab/apollo_domain_classes.git
