--- a/.travis.yml
+++ b/.travis.yml
@@ -16,12 +16,10 @@ cache:
     - $HOME/.gradle/wrapper/
     - $HOME/.cache/bower/
 before_install:
-    - npm install -g eslint eslint-plugin-react eslint-config-airbnb-es5 babel-eslint bower
+    - npm install -g bower
 before_script:
     - psql -c 'create database "apollo-test";' -U postgres;
     - git clone https://github.com/elsiklab/apollo_domain_classes.git
     - cd apollo_domain_classes && ./grailsw refresh-dependencies && ./grailsw maven-install && cd -
 script:
     - ./grailsw test-app --non-interactive
-after_script:
-    - eslint client
